--- a/themodernpfx/src/Contact.css
+++ b/themodernpfx/src/Contact.css
@@ -1,11 +1,27 @@
+h2 {
+  text-align: center;
+}
+section {
+  padding-top: 150px;
+  width: 100%;
+  animation: colorChange 15s ease infinite;
+  background: linear-gradient(45deg, #654c4c, #ffd93d, #02381e, #6bc3ff, #ff85f6);
+  background-size: 500% 500%; /* Larger size for smoother transition */
+}
 
+@keyframes colorChange {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
 form {
     display: flex;
     flex-direction: column;
-    max-width: 400px;
+    width:5go00px;
     margin: 0 auto;
-    padding-top: 25px;
-    padding-bottom: 20px;
+    
+    padding-bottom: 100px;
+    
   }
   
   div {
