--- a/themodernpfx/src/Hero.css
+++ b/themodernpfx/src/Hero.css
@@ -1,8 +1,9 @@
 /* App.css or Hero.css */
 body, html {
     margin: 0;
-    padding: 0;
+    
     height: 100%;
+    width: 100%;
     font-family: 'Arial', sans-serif;
   }
   
@@ -40,16 +41,8 @@ body, html {
     color: #d4af37; /* Gold hover effect */
   }
   
-  .hero {
-    height: 100vh; /* Full viewport height */
-    background: url('./assets/img/hero-background.jpg') no-repeat center center/cover; /* Background image */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    text-align: center;
-  }
+
+  
   
   .hero h1 {
     font-size: 4rem;
