--- a/themodernpfx/src/Portfolio.css
+++ b/themodernpfx/src/Portfolio.css
@@ -27,24 +27,23 @@ h2 {
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15); /* Slight shadow for a floating effect */
   transition: transform 0.3s ease, background-color 0.3s ease, border 0.3s ease;
-  color: #fff; /* Adjust text color inside cards */
+  color: #fff; 
   border: 2px solid silver; /* Add silver outline */
-  flex: 1 1 200px; /* Flex-grow, Flex-shrink, and min-width */
-  max-width: 300px; /* Max width for each item to make it responsive */
-  
+  flex: 1 1 200px;
+  max-width: 300px; 
 }
 
-/* Card Hover Effect */
+
 .portfolio-item:hover {
   transform: translateY(-5px);
-  background-color: #444; /* Change background on hover */
-  border-color: #c0c0c0; /* Slightly lighten the silver on hover */
+  background-color: #444; 
+  border-color: #c0c0c0; 
 }
 
 /* Image Styling */
 .portfolio-img {
   width: 100%;
-  height: 300px; /* Fixed height for all images */
+  height: 300px; 
   object-fit: cover; /* Ensures the image fits within the bounds */
 }
 
