--- a/src/Contact.css
+++ b/src/Contact.css
@@ -17,7 +17,7 @@ section {
 form {
     display: flex;
     flex-direction: column;
-    width:5go00px;
+    width:500px;
     margin: 0 auto;
     
     padding-bottom: 100px;
